# globant-data-engineer-challenge

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  config.py  database.py  models.py  services.py
app/routes/: __init__.py  metrics_routes.py  upload_routes.py
migrations/versions/: 1fdc4bb9bb46_auto_migration.py  9809dc48b602_auto_migration.py  c4b761994ad5_auto_migration.py
resources/: gcp_proposed_architecture.drawio
